--- a/TemaHotel/TemaHotel/SignUp.xaml
+++ b/TemaHotel/TemaHotel/SignUp.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="TemaHotel.SignUp"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="SignUp" Height="350" Width="320" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Background="DarkGray">
+        Title="SignUp" Height="350" Width="320" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Background="Red">
     <Grid>
         <Label Content="Email:" HorizontalAlignment="Left" Height="30" Margin="10,74,0,0" VerticalAlignment="Top" Width="96"/>
         <TextBox Name="txtEmail" HorizontalAlignment="Left" Height="21" Margin="128,74,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="134"/>
