--- a/TemaHotel/TemaHotel/SignUp.xaml
+++ b/TemaHotel/TemaHotel/SignUp.xaml
@@ -1,9 +1,12 @@
 ﻿<Window x:Class="TemaHotel.SignUp"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="SignUp" Height="350" Width="320" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Background="Blue">
+        Title="SignUp" Height="350" Width="320" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+    <Window.Background>
+        <ImageBrush ImageSource="Resources/signupback.jpg" />
+    </Window.Background>
     <Grid>
-        <Label Content="Email:" HorizontalAlignment="Left" Height="30" Margin="10,74,0,0" VerticalAlignment="Top" Width="96"/>
+        <Label Content="Email:" Foreground="Black" FontFamily="Bold" HorizontalAlignment="Left" Height="30" Margin="10,74,0,0" VerticalAlignment="Top" Width="96"/>
         <TextBox Name="txtEmail" HorizontalAlignment="Left" Height="21" Margin="128,74,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="134"/>
         <Label Content="Create Account" HorizontalAlignment="Left"  Height="29" Margin="80,29,0,0" VerticalAlignment="Top" Width="102"/>
         <Label Content="Password" HorizontalAlignment="Left" Height="27" Margin="10,116,0,0" VerticalAlignment="Top" Width="75"/>
