--- a/TemaHotel/TemaHotel/SignUp.xaml
+++ b/TemaHotel/TemaHotel/SignUp.xaml
@@ -1,23 +1,34 @@
 ﻿<Window x:Class="TemaHotel.SignUp"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="SignUp" Height="350" Width="320" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
-    <Window.Background>
-        <ImageBrush ImageSource="Resources/signupback.jpg" />
-    </Window.Background>
+        xmlns:txt="clr-namespace:TemaHotel.ViewModel"
+        xmlns:localConverter="clr-namespace:TemaHotel.Convertors"
+
+        Title="SignUp" Height="400" Width="500" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Background="DarkGray">
     <Grid>
-        <Label Content="Email:" Foreground="Black" FontFamily="Bold" HorizontalAlignment="Left" Height="30" Margin="10,74,0,0" VerticalAlignment="Top" Width="96"/>
-        <TextBox Name="txtEmail" HorizontalAlignment="Left" Height="21" Margin="128,74,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="134"/>
-        <Label Content="Create Account" HorizontalAlignment="Left"  Height="29" Margin="80,29,0,0" VerticalAlignment="Top" Width="102"/>
-        <Label Content="Password" HorizontalAlignment="Left" Height="27" Margin="10,116,0,0" VerticalAlignment="Top" Width="75"/>
-        <Label Content="Retype Password" HorizontalAlignment="Left" Height="29" Margin="10,165,0,0" VerticalAlignment="Top" Width="104"/>
-        <TextBox Name="txtPassword" HorizontalAlignment="Left" Height="21" Margin="128,120,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="134"
-                 Text="{Binding Password, Mode=OneWayToSource}"/>
-        <TextBox Name="txtCnfPass" HorizontalAlignment="Left" Height="21" Margin="128,165,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="134"/>
-        <Button Content="Create Account" HorizontalAlignment="Left" Margin="80,230,0,0" VerticalAlignment="Top" Width="102"
-                   Command="{Binding RelativeSource={RelativeSource AncestorType=Window},Path=DataContext.CreateUserCommand}"
-                    CommandParameter="{Binding RelativeSource={RelativeSource Self}}">
+        <Grid.Resources>
+            <localConverter:UserConvert x:Key="userConvert" />
+        </Grid.Resources>
+        <Label Content="Email:"  FontFamily="Bold" HorizontalAlignment="Left" Height="30" Margin="103,156,0,0" VerticalAlignment="Top" Width="96"/>
+        <TextBox Name="txtEmail" HorizontalAlignment="Left" Height="21" Margin="221,156,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="134"/>
+        <Label Content="Create Account" HorizontalAlignment="Left"  Height="29" Margin="173,29,0,0" VerticalAlignment="Top" Width="102"/>
+        <Label Content="Password" HorizontalAlignment="Left" Height="27" Margin="103,198,0,0" VerticalAlignment="Top" Width="75"/>
+        <Label Content="Retype Password" HorizontalAlignment="Left" Height="29" Margin="103,247,0,0" VerticalAlignment="Top" Width="104"/>
+        <TextBox Name="txtPassword" HorizontalAlignment="Left" Height="21" Margin="221,202,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="134"/>
+        <TextBox Name="txtCnfPass" HorizontalAlignment="Left" Height="21" Margin="221,247,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="134"/>
+        <Button Content="Create Account" HorizontalAlignment="Left" Margin="173,289,0,0" VerticalAlignment="Top" Width="102"
+                   Command="{Binding RelativeSource={RelativeSource AncestorType=Window},Path=DataContext.CreateUserCommand}" >
+                <Button.CommandParameter>
+            <MultiBinding Converter="{StaticResource userConvert}">
+                <Binding ElementName="txtName" Path="Text"/>
+                <Binding ElementName="txtUsername" Path="Text"/>
+            </MultiBinding>
+            </Button.CommandParameter >
         </Button>
+        <Label Content="Username" HorizontalAlignment="Left" Margin="103,76,0,0" VerticalAlignment="Top" Width="75"/>
+        <TextBox Name="txtUsername" HorizontalAlignment="Left" Height="21" Margin="221,76,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="134"/>
+        <Label Content="Name" HorizontalAlignment="Left" Margin="103,116,0,0" VerticalAlignment="Top"/>
+        <TextBox  Name="txtName" HorizontalAlignment="Left" Height="21" Margin="221,117,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="134"/>
 
     </Grid>
 </Window>
