--- a/TemaHotel/TemaHotel/SignUp.xaml
+++ b/TemaHotel/TemaHotel/SignUp.xaml
@@ -1,9 +1,8 @@
-﻿<Window x:Class="TemaHotel.SignUp"
+﻿<Window x:Class="TemaHotel.SignUp" Name="wndSignUp"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:txt="clr-namespace:TemaHotel.ViewModel"
         xmlns:localConverter="clr-namespace:TemaHotel.Convertors"
-
         Title="SignUp" Height="400" Width="500" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Background="DarkGray">
     <Grid>
         <Grid.Resources>
@@ -20,15 +19,17 @@
                    Command="{Binding RelativeSource={RelativeSource AncestorType=Window},Path=DataContext.CreateUserCommand}" >
                 <Button.CommandParameter>
             <MultiBinding Converter="{StaticResource userConvert}">
-                    <Binding ElementName="txtPassword" Path="Text" Mode="TwoWay"/>
+                    <Binding ElementName="txtUsername" Path="Text"/>
+                    <Binding ElementName="txtName" Path="Text"/>
+                    <Binding ElementName="txtEmail" Path="Text"/>
+                    <Binding ElementName="txtPassword" Path="Text"/>
                     <Binding ElementName="txtCnfPass" Path="Text"/>
-            </MultiBinding>
+                </MultiBinding>
             </Button.CommandParameter >
         </Button>
         <Label Content="Username" HorizontalAlignment="Left" Margin="103,76,0,0" VerticalAlignment="Top" Width="75"/>
         <TextBox Name="txtUsername" HorizontalAlignment="Left" Height="21" Margin="221,76,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="134"/>
         <Label Content="Name" HorizontalAlignment="Left" Margin="103,116,0,0" VerticalAlignment="Top"/>
         <TextBox  Name="txtName" HorizontalAlignment="Left" Height="21" Margin="221,117,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="134"/>
-
     </Grid>
 </Window>
