--- a/TemaHotel/TemaHotel/MainWindow.xaml
+++ b/TemaHotel/TemaHotel/MainWindow.xaml
@@ -3,7 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:TemaHotel.ViewModel"
         xmlns:converters="clr-namespace:TemaHotel.Utilities"
-        Title="MainWindow" Height="350" Width="525" WindowStartupLocation="CenterScreen">
+        xmlns:localConverter="clr-namespace:TemaHotel.Convertors"
+        Title="MainWindow" Height="500" Width="625" WindowStartupLocation="CenterScreen">
     <Window.DataContext>
         <local:MenuCommands />
     </Window.DataContext>
@@ -11,7 +12,6 @@
         <DataTemplate x:Key="DataTemplate_Level2">
             <Rectangle Fill="Black" Height="40"  Width="{Binding ActualWidth, ElementName=lst, Converter={converters:PercentageConverter}, ConverterParameter='80'}" HorizontalAlignment="Stretch" Margin="4,4,4,4"/>
         </DataTemplate>
-
         <DataTemplate x:Key="DataTemplate_Level1">
             <ItemsControl ItemsSource="{Binding}" ItemTemplate="{DynamicResource DataTemplate_Level2}">
                 <ItemsControl.ItemsPanel>
@@ -23,71 +23,138 @@
         </DataTemplate>
     </Window.Resources>
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="20" ></RowDefinition>
-            <RowDefinition></RowDefinition>
-        </Grid.RowDefinitions>
-            <DockPanel VerticalAlignment="Top" Grid.Row="0">
-            <Menu DockPanel.Dock="Top" Height="30" FontSize="15" FontWeight="Bold">
-                <Menu.Background>
-                    <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
-                        <!--<GradientStop Color="#FF3A60AD" Offset="0.528"/>-->
-                        <GradientStop Color="#FF6A85D8" Offset="0.01"/>
-                        <GradientStop Color="#FF3464C4" Offset="1"/>
-                        <!--<GradientStop Color="#FF202E7E" Offset="1"/>-->
-                    </LinearGradientBrush>
-                </Menu.Background>
-                <MenuItem Header="Sign Up" Foreground="White" Command="{Binding Path=SignUpCommand}"></MenuItem>
-                <MenuItem Header="Login" Foreground="White" Command="{Binding Path=ShowLoginCommand}">
-                    <MenuItem.Style>
-                        <Style TargetType="MenuItem">
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding IsAuthenticated}" Value="False">
-                                    <Setter Property="Visibility"  Value="Visible"/>
-                                </DataTrigger>
-                                <DataTrigger Binding="{Binding IsAuthenticated}" Value="True">
-                                    <Setter Property="Visibility"  Value="Hidden"/>
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </MenuItem.Style>
-                </MenuItem>
-                <MenuItem Header="Logout" Foreground="White" Command="{Binding Path=LogoutCommand}">
-                    <MenuItem.Style>
-                        <Style TargetType="MenuItem">
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding IsAuthenticated}" Value="True">
-                                    <Setter Property="Visibility"  Value="Visible"/>
-                                </DataTrigger>
-                                <DataTrigger Binding="{Binding IsAuthenticated}" Value="False">
-                                    <Setter Property="Visibility"  Value="Hidden"/>
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </MenuItem.Style>
-                </MenuItem>
-            </Menu>
-        </DockPanel>
-        <Grid  VerticalAlignment="Stretch" Grid.Row="1" >
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="100"></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
-            </Grid.ColumnDefinitions>
+        <Grid Name="mainGrd">
+            <Grid.Style>
+                <Style TargetType="Grid">
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding ShowLogin}" Value="False">
+                            <Setter Property="Visibility"  Value="Visible"/>
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding ShowLogin}" Value="True">
+                            <Setter Property="Visibility"  Value="Hidden"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Grid.Style>
             <Grid.RowDefinitions>
-                <RowDefinition Height="20"></RowDefinition>
+                <RowDefinition Height="20" ></RowDefinition>
                 <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
-            <Menu Grid.ColumnSpan="2">         
-                    <MenuItem Header="Create Room"></MenuItem>
-                    <MenuItem Header="View Rooms" ></MenuItem>
-          
-            </Menu>
-            <Grid Grid.Column="1" Grid.Row="1">
-                <Rectangle Fill="Yellow"/>
-                <ItemsControl x:Name="lst" ItemTemplate="{DynamicResource DataTemplate_Level1}" VerticalAlignment="Top" HorizontalAlignment="Center" 
+            <DockPanel VerticalAlignment="Top" Grid.Row="0">
+                <Menu DockPanel.Dock="Top" Height="30" FontSize="15" FontWeight="Bold">
+                    <Menu.Background>
+                        <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
+                            <GradientStop Color="#FF3A60AD" Offset="0.528"/>
+                            <GradientStop Color="#FF6A85D8" Offset="0.01"/>
+                            <GradientStop Color="#FF3464C4" Offset="1"/>
+                            <GradientStop Color="#FF202E7E" Offset="1"/>
+                        </LinearGradientBrush>
+                    </Menu.Background>
+                    <MenuItem Header="Sign Up" Foreground="White" Command="{Binding Path=SignUpCommand}">
+                    <MenuItem.Style>
+                        <Style TargetType="MenuItem">
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding IsAuthenticated}" Value="False">
+                                    <Setter Property="Visibility"  Value="Visible"/>
+                                </DataTrigger>
+                                <DataTrigger Binding="{Binding IsAuthenticated}" Value="True">
+                                    <Setter Property="Visibility"  Value="Hidden"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </MenuItem.Style>
+                    </MenuItem>
+                    <MenuItem Header="Login" Foreground="White" Command="{Binding Path=ShowLoginCommand}">
+                        <MenuItem.Style>
+                            <Style TargetType="MenuItem">
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding IsAuthenticated}" Value="False">
+                                        <Setter Property="Visibility"  Value="Visible"/>
+                                    </DataTrigger>
+                                    <DataTrigger Binding="{Binding IsAuthenticated}" Value="True">
+                                        <Setter Property="Visibility"  Value="Hidden"/>
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </MenuItem.Style>
+                    </MenuItem>
+                    <MenuItem Header="Logout" Foreground="White" Command="{Binding Path=LogoutCommand}">
+                        <MenuItem.Style>
+                            <Style TargetType="MenuItem">
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding IsAuthenticated}" Value="True">
+                                        <Setter Property="Visibility"  Value="Visible"/>
+                                    </DataTrigger>
+                                    <DataTrigger Binding="{Binding IsAuthenticated}" Value="False">
+                                        <Setter Property="Visibility"  Value="Hidden"/>
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </MenuItem.Style>
+                    </MenuItem>
+                </Menu>
+            </DockPanel>
+            <Grid  VerticalAlignment="Stretch" Grid.Row="1" >
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="100"></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="20"></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                </Grid.RowDefinitions>
+                <Menu Grid.ColumnSpan="2">
+                    <Menu.Style>
+                        <Style TargetType="Menu">
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding ShowMenu}" Value="True">
+                                    <Setter Property="Visibility"  Value="Visible"/>
+                                </DataTrigger>
+                                <DataTrigger Binding="{Binding ShowMenu}" Value="False">
+                                    <Setter Property="Visibility"  Value="Hidden"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Menu.Style>
+                    <MenuItem Header="Administrare conturi" Command="{Binding Path=ManageRoomCommand}"/>
+                    <MenuItem Header="Administrare camere" />
+                    <MenuItem Header="Administrare dotari" />
+                    <MenuItem Header="Administrare servicii" />
+                    <MenuItem Header="Administrare camere" />
+                    <MenuItem Header="Administrare oferte" />
+                </Menu>
+                <Grid Grid.Column="1" Grid.Row="1">
+                    <Rectangle Fill="Yellow"/>
+                    <ItemsControl x:Name="lst" ItemTemplate="{DynamicResource DataTemplate_Level1}" VerticalAlignment="Top" HorizontalAlignment="Center" 
                           ItemsSource="{Binding RelativeSource={RelativeSource AncestorType=Window}, Path=DataContext.List}"/>
-            </Grid>
+                </Grid>
 
+            </Grid>
+        </Grid>
+        <Grid Name="grdLogin" Background="DarkGray">
+            <Grid.Style>
+                <Style TargetType="Grid">
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding ShowLogin}" Value="True">
+                            <Setter Property="Visibility"  Value="Visible"/>
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding ShowLogin}" Value="False">
+                            <Setter Property="Visibility"  Value="Hidden"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Grid.Style>
+            <Grid.Resources>
+                <localConverter:UserConvert x:Key="userConvert" />
+            </Grid.Resources>
+            <Label Content="Login" Name="lblLogin" Height="31" Margin="0,37,267,0" VerticalAlignment="Top" RenderTransformOrigin="0.6,0.374" HorizontalAlignment="Center" Width="54"/>
+            <Label Content="Username" Name="lblLgUsername" Margin="0,82,309,0" VerticalAlignment="Top" HorizontalAlignment="Center" Width="63"/>
+            <Label Content="Password" Name="lblLgPass" Margin="0,130,312,0" VerticalAlignment="Top" HorizontalAlignment="Center" Width="60"/>
+            <TextBox Name="txtLgUsername" Text="{Binding RelativeSource={RelativeSource AncestorType=Window},Path=DataContext.Username, Mode=TwoWay}" Height="21" Margin="100,86,209,0" TextWrapping="Wrap" VerticalAlignment="Top" HorizontalAlignment="Center" Width="95"/>
+            <TextBox Name="txtLgPass" Text="{Binding RelativeSource={RelativeSource AncestorType=Window},Path=DataContext.Password, Mode=TwoWay}" Height="26" Margin="100,130,209,0" TextWrapping="Wrap" VerticalAlignment="Top" HorizontalAlignment="Center" Width="95"/>
+            <Button Content="Login" Name="btnLogin" Height="30" Margin="0,192,282,0" VerticalAlignment="Top" Command="{Binding RelativeSource={RelativeSource AncestorType=Window},Path=DataContext.LoginCommand}" HorizontalAlignment="Center" Width="76"/>
+            <Button Content="Cancel" Name="btnLoginCancel" Height="30" Margin="100,192,167,0" VerticalAlignment="Top" Command="{Binding RelativeSource={RelativeSource AncestorType=Window},Path=DataContext.CancelLoginCommand}" HorizontalAlignment="Center" Width="76" >
+            </Button>
         </Grid>
     </Grid>
 </Window>
