--- a/TemaHotel/TemaHotel/ManageUsers.xaml
+++ b/TemaHotel/TemaHotel/ManageUsers.xaml
@@ -1,9 +1,9 @@
 ﻿<Window x:Class="TemaHotel.ManageUsers"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="ManageUsers" Height="500" Width="600">
+        Title="ManageUsers" Height="500" Width="600" Background="LightBlue">
     <Grid>
-        <ListView BorderThickness="5" Name="lstVwStud" Padding="0" Height="200" VerticalAlignment="Top" ItemsSource="{Binding RelativeSource={RelativeSource AncestorType=Window}, Path=DataContext.Users}">
+        <ListView Name="lstVwUsers" BorderBrush="RoyalBlue"  BorderThickness="5" Padding="0" Height="200" VerticalAlignment="Top" ItemsSource="{Binding RelativeSource={RelativeSource AncestorType=Window}, Path=DataContext.Users}">
             <ListView.Resources >
                 <Style TargetType="{x:Type GridViewColumnHeader}">
                     <Setter Property="HorizontalContentAlignment" Value="Center" />
@@ -27,18 +27,120 @@
         <TextBox x:Name="txtName" Text="{Binding RelativeSource={RelativeSource AncestorType=Window},Path=DataContext.Name, Mode=TwoWay}" HorizontalAlignment="Left" Height="18" Margin="107,274,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="111"/>
         <TextBox x:Name="txtEmail" Text="{Binding RelativeSource={RelativeSource AncestorType=Window},Path=DataContext.Email, Mode=TwoWay}" HorizontalAlignment="Left" Height="18" Margin="107,304,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="111"/>
         <TextBox x:Name="txtPassword" Text="{Binding RelativeSource={RelativeSource AncestorType=Window},Path=DataContext.Password, Mode=TwoWay}" HorizontalAlignment="Left" Height="18" Margin="107,334,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="111"/>
-        <TextBox x:Name="txtUserType" Text="{Binding RelativeSource={RelativeSource AncestorType=Window},Path=DataContext.UserType, Mode=TwoWay}" HorizontalAlignment="Left" Height="18" Margin="107,364,0,0" VerticalAlignment="Top" Width="111"/>
         <Label Content="Username" HorizontalAlignment="Left" Margin="24,236,0,0" VerticalAlignment="Top" Height="28" RenderTransformOrigin="1.158,-1.986"/>
         <Label Content="Name" HorizontalAlignment="Left" Margin="24,266,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lblEmail" Content="Email" HorizontalAlignment="Left" Margin="24,296,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.561,0.24"/>
         <Label Content="Password" HorizontalAlignment="Left" Margin="24,326,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.271,0.526"/>
-        <Label Content="UserType" HorizontalAlignment="Left" Height="26" Margin="24,356,0,0" VerticalAlignment="Top" Width="83" RenderTransformOrigin="1.446,0.303"/>
+        <Label Content="UserType" HorizontalAlignment="Left" Height="26" Margin="24,363,0,0" VerticalAlignment="Top" Width="83" RenderTransformOrigin="1.446,0.303"/>
         <Button Name="btnAddUser" Content="Create User" Margin="340,240,0,0"  Height="20" VerticalAlignment="Top" HorizontalAlignment="Left" Width="142"
-                Command="{Binding RelativeSource={RelativeSource AncestorType=Window},Path=DataContext.CreateUsCommand}" />
-        <Button Name="btnDeleteUser"  Content="Delete Student" Margin="340,270,0,0"  Height="20" VerticalAlignment="Top" HorizontalAlignment="Left" Width="142" />
-        <Button Name="btnUpdateUser" Content="Update Details" Margin="340,300,0,0" Height="20" VerticalAlignment="Top" HorizontalAlignment="Left" Width="142"/>
-        <Button Name="btnViewDetails" Content="View Details" Margin="340,330,0,0" Height="20" VerticalAlignment="Top" HorizontalAlignment="Left" Width="142" />
-        <Button Name="btnSave" Content="Save" Visibility="Hidden" HorizontalAlignment="Left" Margin="564,50,0,0" VerticalAlignment="Top" Width="74" />
-        <Button Name="btnCancel" Content="Cancel" Visibility="Hidden" HorizontalAlignment="Left" Margin="564,88,0,0" VerticalAlignment="Top" Width="74"/>
+                Command="{Binding RelativeSource={RelativeSource AncestorType=Window},Path=DataContext.CreateUsCommand}">
+            <Button.Style>
+                <Style TargetType="Button">
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding ShowUpdateDetails}" Value="False">
+                            <Setter Property="IsEnabled"  Value="True"/>
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding ShowUpdateDetails}" Value="True">
+                            <Setter Property="IsEnabled"  Value="False"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Button.Style>
+        </Button>
+        <Button Name="btnDeleteUser"  Content="Delete User" Margin="340,270,0,0"  Height="20" VerticalAlignment="Top" HorizontalAlignment="Left" Width="142"
+                 Command="{Binding RelativeSource={RelativeSource AncestorType=Window},Path=DataContext.DeleteUserCommand}" 
+                CommandParameter="{Binding ElementName=lstVwUsers,Path=SelectedItem}">
+            <Button.Style>
+                <Style TargetType="Button">
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding ShowUpdateDetails}" Value="False">
+                            <Setter Property="IsEnabled"  Value="True"/>
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding ShowUpdateDetails}" Value="True">
+                            <Setter Property="IsEnabled"  Value="False"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Button.Style>
+        </Button>
+        <Button Name="btnUpdateUser" Content="Update Details" Margin="340,300,0,0" Height="20" VerticalAlignment="Top" HorizontalAlignment="Left" Width="142"
+                  Command="{Binding RelativeSource={RelativeSource AncestorType=Window},Path=DataContext.UpdateUserCommand}" 
+                CommandParameter="{Binding ElementName=lstVwUsers,Path=SelectedItem}">
+            <Button.Style>
+                <Style TargetType="Button">
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding ShowUpdateDetails}" Value="False">
+                            <Setter Property="IsEnabled"  Value="True"/>
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding ShowUpdateDetails}" Value="True">
+                            <Setter Property="IsEnabled"  Value="False"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Button.Style>
+        </Button>
+        <Button Name="btnClearData" Content="Clear Data" Margin="340,360,0,0" Height="20" VerticalAlignment="Top" HorizontalAlignment="Left" Width="142"
+                  Command="{Binding RelativeSource={RelativeSource AncestorType=Window},Path=DataContext.ClearDataControlsCommand}">
+            <Button.Style>
+                <Style TargetType="Button">
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding ShowUpdateDetails}" Value="False">
+                            <Setter Property="IsEnabled"  Value="True"/>
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding ShowUpdateDetails}" Value="True">
+                            <Setter Property="IsEnabled"  Value="False"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Button.Style>
+        </Button>
+        <Button Name="btnViewDetails" Content="View Details" Margin="340,330,0,0" Height="20" VerticalAlignment="Top" HorizontalAlignment="Left" Width="142" >
+            <Button.Style>
+                <Style TargetType="Button">
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding ShowUpdateDetails}" Value="False">
+                            <Setter Property="IsEnabled"  Value="True"/>
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding ShowUpdateDetails}" Value="True">
+                            <Setter Property="IsEnabled"  Value="False"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Button.Style>
+        </Button>
+        <Button Name="btnSave" Content="Save" HorizontalAlignment="Left" Margin="63,421,0,0" VerticalAlignment="Top" Width="74"
+                 Command="{Binding RelativeSource={RelativeSource AncestorType=Window},Path=DataContext.SaveUpdateModificationCommand}"
+                 CommandParameter="{Binding ElementName=lstVwUsers,Path=SelectedItem}">
+            <Button.Style>
+                <Style TargetType="Button">
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding ShowUpdateDetails}" Value="True">
+                            <Setter Property="Visibility"  Value="Visible"/>
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding ShowUpdateDetails}" Value="False">
+                            <Setter Property="Visibility"  Value="Hidden"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Button.Style>
+        </Button>
+        <Button Name="btnCancel" Content="Cancel" HorizontalAlignment="Left" Margin="185,421,0,0" VerticalAlignment="Top" Width="74"
+                 Command="{Binding RelativeSource={RelativeSource AncestorType=Window},Path=DataContext.CancelUpdateStateCommand}">
+            <Button.Style>
+                <Style TargetType="Button">
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding ShowUpdateDetails}" Value="True">
+                            <Setter Property="Visibility"  Value="Visible"/>
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding ShowUpdateDetails}" Value="False">
+                            <Setter Property="Visibility"  Value="Hidden"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Button.Style>
+        </Button>
+        <ComboBox HorizontalAlignment="Left" Height="22" Margin="107,365,0,0" VerticalAlignment="Top" Width="111"
+                 ItemsSource="{Binding RelativeSource={RelativeSource AncestorType=Window},Path=DataContext.UserTypeCM}"
+                  SelectedItem="{Binding RelativeSource={RelativeSource AncestorType=Window},Path=DataContext.UserType}"/>
     </Grid>
 </Window>
