--- a/TemaHotel/TemaHotel/App.xaml
+++ b/TemaHotel/TemaHotel/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="TemaHotel.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="Manage.xaml">
+             StartupUri="ManageRooms.xaml">
     <Application.Resources>
          
     </Application.Resources>
